# racing_robot

./: STAGE2_GOAL_DIRECT_FIX_LOG.md
install/: local_setup.sh  setup.ps1  setup.sh
install/ackermann_msgs/share/ackermann_msgs/: local_setup.sh  package.ps1  package.sh
install/bno055/share/bno055/: package.ps1  package.sh
install/lslidar_driver/share/lslidar_driver/: local_setup.sh  package.ps1  package.sh
install/lslidar_msgs/share/lslidar_msgs/: local_setup.sh  package.ps1  package.sh
install/origincar_base/share/origincar_base/: local_setup.sh  package.ps1  package.sh
install/origincar_bringup/share/origincar_bringup/: local_setup.sh  package.ps1  package.sh
install/origincar_description/share/origincar_description/: local_setup.sh  package.ps1  package.sh
install/origincar_msg/share/origincar_msg/: package.ps1  package.sh
install/qr_scanner/lib/qr_scanner/: competition_controller  image_caption_node  person_detection_node  qr_scanner  stage2_inertial_navigator
install/qr_scanner/share/qr_scanner/: package.dsv  package.ps1  package.sh
install/racing_bringup/share/racing_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/: imu_drift_tester.py
src/origincar/origincar_bringup/: CMakeLists.txt  package.xml
src/origincar/utils/: CMakeLists.txt
src/racing/qr_scanner/: package.xml  setup.cfg  setup.py
src/racing/qr_scanner/qr_scanner/: qr_scanner.py
src/racing/qr_scanner/resource/: qr_scanner
src/racing/racing_bringup/: setup.cfg  setup.py
src/racing/racing_stage1/: package.xml  setup.cfg  setup.py
src/racing/racing_stage2/: package.xml  setup.cfg  setup.py
src/racing/racing_stage2/config/: inertial_stage2.yaml
src/racing/racing_stage2/launch/: competition_inertial.launch.py  competition_stage2.launch.py
src/racing/racing_stage2/racing_stage2/: stage2_inertial_navigator.py
src/racing/racing_stage2_param_test/: package.xml  setup.cfg  setup.py
src/racing/racing_stage2_param_test/docs/: AVOIDANCE.md  NAVIGATION.md  README.md
src/racing/racing_stage2_param_test/launch/: direct_inertial_test.launch.py
src/racing/racing_stage2_param_test/racing_stage2_param_test/: __init__.py  auto_offline_test.py  direct_inertial_tester.py  direct_inertial_tester_avoidance.py  direct_inertial_tester_cmd_safety.py  direct_inertial_tester_debug_log.py  direct_inertial_tester_navigation.py  direct_inertial_tester_obstacle.py  hardware_sim.py  launch_param_loader.py  offline_ring_test.py  offline_runner.py  plot_ring_trajectory.py  plot_scenario_matrix.py  real_logic_sim.py  ring_track.py  segment_frame.py  test_log_paths.py  twist_cmd_relay.py  vehicle_param_sync.py  world_plan_nav.py  world_segment.py
src/racing/racing_stage2_param_test/resource/: racing_stage2_param_test
src/racing/racing_stage2_param_test/simulation/: plot_real_route_with_obstacles.py  real_logic_sim.py  visualize_real_logic.py  visualize_trajectory.py
src/racing/racing_stage3/: package.xml  setup.cfg  setup.py
src/racing/simple_avoidance/: package.xml  setup.cfg  setup.py
(+74 files in other folders)
